--- a/public/about.html
+++ b/public/about.html
@@ -8,26 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">ABCreates</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./work.html">Work</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
-
-    <section>
+    <main>
       <div class="containter">
         <div class="item">
           <div class="img_wrap"></div>
@@ -53,6 +34,7 @@
           <div class="img_wrap"></div>
         </div>
       </div>
-    </section>
+    </main>
+    <script src="./js/about.js"></script>
   </body>
 </html>
