--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,6 @@
       </div>
     </div>
   </body>
-  <script src="./js/parallax.js" defer></script>
+  <script src="./js/home.js" defer></script>
   <script src="./js/slider.js" defer></script>
 </html>
