--- a/public/about.html
+++ b/public/about.html
@@ -9,7 +9,15 @@
   </head>
   <body>
     <main>
-      <div class="containter">
+      <div class="container">
+        <div class="item">
+          <div class="img_wrap"></div>
+        </div>
+
+        <div class="item">
+          <div class="img_wrap"></div>
+        </div>
+
         <div class="item">
           <div class="img_wrap"></div>
         </div>
