--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <div id="app">
       <div class="fixed-section firstpage">
         <h1 class="heading">Alex Blackburn CREATES</h1>
-        <img class="image" src="./assets/insta singer_-5.JPG" alt="" />
+        <img class="image" src="./images/1.JPG" alt="" />
         <div class="background">
           <div class="bg-block"></div>
         </div>
@@ -45,14 +45,14 @@
           <span>Blackburn</span>
           <span>CREATES</span>
         </h1>
-        <img src="./assets/about.jpg" class="about" />
+        <img src="./images/2.jpg" class="about" />
       </div>
 
       <div class="thirdpage">
         <div class="progress-line"></div>
 
         <div class="title">
-          <h2>Hello Parallax</h2>
+          <h2></h2>
         </div>
 
         <div class="imgs">
@@ -61,11 +61,7 @@
             src="https://placekitten.com/g/400/400"
             alt=""
           />
-          <img
-            class="img img2"
-            src="https://placekitten.com/g/400/500"
-            alt=""
-          />
+          <img class="img img2" src="./assets/pics/forSite.jpg" alt="" />
         </div>
 
         <div class="bottom-sect"></div>
