--- a/public/work.html
+++ b/public/work.html
@@ -32,16 +32,16 @@
 
       <ul class="slides-container" id="slides-container">
         <li class="slide">
-          <img src="../public/Assets/may-11.jpg" alt="slide 1" class="slide" />
+          <img src="./images/3.jpg" alt="slide 1" class="slide" />
         </li>
         <li class="slide">
-          <img src="../public/Assets/may-12.jpg" alt="slide 2" class="slide" />
+          <img src="./images/4.jpg" alt="slide 2" class="slide" />
         </li>
         <li class="slide">
-          <img src="../public/Assets/may-13.jpg" alt="slide 3" class="slide" />
+          <img src="./images/5.jpg" alt="slide 3" class="slide" />
         </li>
         <li class="slide">
-          <img src="../public/Assets/may-14.jpg" alt="slide 4" class="slide" />
+          <img src="./images/6.jpg" alt="slide 4" class="slide" />
         </li>
       </ul>
     </section>
