--- a/public/about.html
+++ b/public/about.html
@@ -9,6 +9,23 @@
   </head>
   <body>
     <main>
+      <header class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="header">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <div class="nav-item">
+                <a class="nav-link" href="./index.html">Home</a>
+              </div>
+              <div class="nav-item">
+                <a class="nav-link" href="./about.html">About Me</a>
+              </div>
+              <div class="nav-item">
+                <a class="nav-link" href="./work.html">Work</a>
+              </div>
+            </ul>
+          </div>
+        </div>
+      </header>
       <div class="container">
         <div class="item">
           <div class="img_wrap"></div>
