--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
+      <div class="header">
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <div class="nav-item">
