--- a/public/index.html
+++ b/public/index.html
@@ -45,14 +45,16 @@
           <span>Blackburn</span>
           <span>CREATES</span>
         </h1>
-        <img src="./images/2.jpg" class="about" />
+        <div class="">
+          <img src="./images/2.jpg" class="about" />
+        </div>
       </div>
 
       <div class="thirdpage">
         <div class="progress-line"></div>
 
         <div class="title">
-          <h2></h2>
+          <h2>Something Cool</h2>
         </div>
 
         <div class="imgs">
