--- a/public/work.html
+++ b/public/work.html
@@ -45,6 +45,6 @@
         </li>
       </ul>
     </section>
-    <script src="./js/slider.js"></script>
+    <script src="./js/work.js"></script>
   </body>
 </html>
