about page updates

--- a/public/index.html
+++ b/public/index.html
@@ -58,11 +58,7 @@
         </div>
 
         <div class="imgs">
-          <img
-            class="img img1"
-            src="https://placekitten.com/g/400/400"
-            alt=""
-          />
+          <img class="img img1" src="./assets/pics/fireMan.jpeg" alt="" />
           <img class="img img2" src="./assets/pics/forSite.jpg" alt="" />
         </div>
 
