improving about page

--- a/public/about.html
+++ b/public/about.html
@@ -26,61 +26,63 @@
           </div>
         </div>
       </header>
-      <div class="container">
-        <div class="item">
-          <div class="img_wrap"></div>
-        </div>
+      <section id="about">
+        <div class="container">
+          <div class="item">
+            <div class="img_wrap"></div>
+          </div>
 
-        <div class="item">
-          <div class="img_wrap"></div>
-        </div>
+          <div class="item">
+            <div class="img_wrap"></div>
+          </div>
 
-        <div class="item">
-          <div class="img_wrap"></div>
-        </div>
+          <div class="item">
+            <div class="img_wrap"></div>
+          </div>
 
-        <div class="item">
-          <div class="img_wrap"></div>
-        </div>
+          <div class="item">
+            <div class="img_wrap"></div>
+          </div>
 
-        <div class="item">
-          <div class="img_wrap"></div>
-        </div>
+          <div class="item">
+            <div class="img_wrap"></div>
+          </div>
 
-        <div class="item">
-          <div class="img_wrap"></div>
-        </div>
+          <div class="item">
+            <div class="img_wrap"></div>
+          </div>
 
-        <div class="item">
-          <div class="img_wrap"></div>
-        </div>
+          <div class="item">
+            <div class="img_wrap"></div>
+          </div>
 
-        <div class="item">
-          <div class="img_wrap"></div>
+          <div class="item">
+            <div class="img_wrap"></div>
+          </div>
+          <div class="fixed-title">
+            <h1>
+              <svg
+                id="Layer_1"
+                data-name="Layer 1"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 924.62 198.56"
+              >
+                <defs>
+                  <style>
+                    .cls-1 {
+                      font-family: BMDoHyeon-OTF-KSCpc-EUC-H, "BM Dohyeon";
+                      font-size: 170px;
+                    }
+                  </style>
+                </defs>
+                <text class="cls-1" transform="translate(0 136)">
+                  <tspan x="0" y="0">ABCreates</tspan>
+                </text>
+              </svg>
+            </h1>
+          </div>
         </div>
-        <div class="fixed-title">
-          <h1>
-            <svg
-              id="Layer_1"
-              data-name="Layer 1"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 924.62 198.56"
-            >
-              <defs>
-                <style>
-                  .cls-1 {
-                    font-family: BMDoHyeon-OTF-KSCpc-EUC-H, "BM Dohyeon";
-                    font-size: 170px;
-                  }
-                </style>
-              </defs>
-              <text class="cls-1" transform="translate(0 136)">
-                <tspan x="0" y="0">ABCreates</tspan>
-              </text>
-            </svg>
-          </h1>
-        </div>
-      </div>
+      </section>
     </main>
     <script src="./js/about.js"></script>
   </body>
