--- a/public/about.html
+++ b/public/about.html
@@ -40,11 +40,11 @@
             <div class="img_wrap"></div>
           </div>
 
-          <div class="item">
+          <div class="item" style="z-index: 3">
             <div class="img_wrap"></div>
           </div>
 
-          <div class="item">
+          <div class="item" style="z-index: 3">
             <div class="img_wrap"></div>
           </div>
 
