--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
         </h1>
         <div class="">
           <img src="./images/2.jpg" class="about" />
+          <h1>Mission</h1>
         </div>
       </div>
 
