splash + updated About

--- a/public/about.html
+++ b/public/about.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <main>
+      <div class="intro">
+        <h1 class="logo-header">
+          <span class="logo">I</span>
+          <span class="logo">CREATE</span>
+        </h1>
+      </div>
       <header class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="header">
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -26,63 +32,111 @@
           </div>
         </div>
       </header>
-      <section id="about">
-        <div class="container">
-          <div class="item">
-            <div class="img_wrap"></div>
-          </div>
 
-          <div class="item">
-            <div class="img_wrap"></div>
-          </div>
-
-          <div class="item">
-            <div class="img_wrap"></div>
-          </div>
-
-          <div class="item" style="z-index: 3">
-            <div class="img_wrap"></div>
-          </div>
-
-          <div class="item" style="z-index: 3">
-            <div class="img_wrap"></div>
-          </div>
-
-          <div class="item">
-            <div class="img_wrap"></div>
-          </div>
-
-          <div class="item">
-            <div class="img_wrap"></div>
-          </div>
-
-          <div class="item">
-            <div class="img_wrap"></div>
-          </div>
-          <div class="fixed-title">
-            <h1>
-              <svg
-                id="Layer_1"
-                data-name="Layer 1"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 924.62 198.56"
-              >
-                <defs>
-                  <style>
-                    .cls-1 {
-                      font-family: BMDoHyeon-OTF-KSCpc-EUC-H, "BM Dohyeon";
-                      font-size: 170px;
-                    }
-                  </style>
-                </defs>
-                <text class="cls-1" transform="translate(0 136)">
-                  <tspan x="0" y="0">ABCreates</tspan>
-                </text>
-              </svg>
-            </h1>
-          </div>
+      <div class="scrollable">
+        <div class="content">
+            <section class="img-section">
+                <div class="wrap img-2">
+                    <div class="img"></div>
+                </div>
+                <div class="proj-info-2">
+                    <span class="wrap"><h1 class="info-text">01</h1></span>
+                    <span class="wrap"><h1 class="info-text">Dining / Lounge</h1></span>
+                    <span class="wrap"><h1 class="info-text">New York</h1></span>
+                    <span class="wrap"><h1 class="info-text">2021</h1></span>
+                </div>
+            </section>
+            <section class="img-section">
+                <div class="wrap img-1">
+                    <div class="img"></div>
+                </div>
+                <div class="proj-info-1">
+                    <span class="wrap"><h1 class="info-text">02</h1></span>
+                    <span class="wrap"><h1 class="info-text">Space</h1></span>
+                    <span class="wrap"><h1 class="info-text">Paris</h1></span>
+                    <span class="wrap"><h1 class="info-text">2021</h1></span>
+                </div>
+            </section>
+            <section class="img-section">
+                <div class="wrap img-3">
+                    <div class="img"></div>
+                </div>
+                <div class="proj-info-3">
+                    <span class="wrap"><h1 class="info-text">03</h1></span>
+                    <span class="wrap"><h1 class="info-text">Desk</h1></span>
+                    <span class="wrap"><h1 class="info-text">London</h1></span>
+                    <span class="wrap"><h1 class="info-text">2020</h1></span>
+                </div>
+            </section>
+            <section class="img-section">
+                <div class="wrap img-1">
+                    <div class="img"></div>
+                </div>
+                <div class="proj-info-1">
+                    <span class="wrap"><h1 class="info-text">04</h1></span>
+                    <span class="wrap"><h1 class="info-text">Detail</h1></span>
+                    <span class="wrap"><h1 class="info-text">Madrid</h1></span>
+                    <span class="wrap"><h1 class="info-text">2020</h1></span>
+                </div>
+            </section>
+            <section class="img-section">
+                <div class="wrap img-3">
+                    <div class="img"></div>
+                </div>
+                <div class="proj-info-3">
+                    <span class="wrap"><h1 class="info-text">05</h1></span>
+                    <span class="wrap"><h1 class="info-text">Modern</h1></span>
+                    <span class="wrap"><h1 class="info-text">Milan</h1></span>
+                    <span class="wrap"><h1 class="info-text">2019</h1></span>
+                </div>
+            </section>
+            <section class="img-section">
+                <div class="wrap img-2 Q">
+                    <div class="img"></div>
+                </div>
+                <div class="proj-info-2">
+                    <span class="wrap"><h1 class="info-text">06</h1></span>
+                    <span class="wrap"><h1 class="info-text">Luxury</h1></span>
+                    <span class="wrap"><h1 class="info-text">Biarritz</h1></span>
+                    <span class="wrap"><h1 class="info-text">2019</h1></span>
+                </div>
+            </section>
+            <section class="img-section">
+                <div class="wrap img-1 Z">
+                    <div class="img"></div>
+                </div>
+                <div class="proj-info-1">
+                    <span class="wrap"><h1 class="info-text">07</h1></span>
+                    <span class="wrap"><h1 class="info-text">Furniture</h1></span>
+                    <span class="wrap"><h1 class="info-text">Lisbon</h1></span>
+                    <span class="wrap"><h1 class="info-text">2018</h1></span>
+                </div>
+            </section>
+            <div class="fixed-title">
+                <h1>
+                  <svg
+                    id="Layer_1"
+                    data-name="Layer 1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 924.62 198.56"
+                  >
+                    <defs>
+                      <style>
+                        .cls-1 {
+                          font-family: BMDoHyeon-OTF-KSCpc-EUC-H, "BM Dohyeon";
+                          font-size: 170px;
+                        }
+                      </style>
+                    </defs>
+                    <text class="cls-1" transform="translate(0 136)">
+                      <tspan x="0" y="0">ABCreates</tspan>
+                    </text>
+                  </svg>
+                </h1>
+              </div>
         </div>
-      </section>
+    </div>
+   
     </main>
     <script src="./js/about.js"></script>
   </body>
