--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles/Home.css" />
   </head>
   <body>
+      <div class="intro">
+        <h1 class="logo-header">
+          <span class="logo">I</span>
+          <span class="logo">CREATE</span>
+        </h1>
+      </div>
+
     <header class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="header">
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -26,7 +33,7 @@
     </header>
     <div id="app">
       <div class="fixed-section firstpage">
-        <h1 class="heading">Alex Blackburn CREATES</h1>
+        <h1 class="heading">A Blackburn CREATES</h1>
         <img class="image" src="./images/1.JPG" alt="" />
         <div class="background">
           <div class="bg-block"></div>
@@ -41,7 +48,7 @@
 
       <div class="fixed-section secondpage">
         <h1 class="heading">
-          <span>Alex</span>
+          <span>A</span>
           <span>Blackburn</span>
           <span>CREATES</span>
         </h1>
@@ -68,5 +75,4 @@
     </div>
   </body>
   <script src="./js/home.js" defer></script>
-  <script src="./js/slider.js" defer></script>
 </html>
