--- a/public/work.html
+++ b/public/work.html
@@ -25,6 +25,12 @@
         </div>
       </div>
     </header>
+    <div class="intro">
+      <h1 class="logo-header">
+        <span class="logo">I</span>
+        <span class="logo">CREATE</span>
+      </h1>
+    </div>
     <section class="slider-wrapper">
       <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button>
 
