--- a/public/about.html
+++ b/public/about.html
@@ -50,67 +50,34 @@
                 <div class="wrap img-1">
                     <div class="img"></div>
                 </div>
-                <div class="proj-info-1">
-                    <span class="wrap"><h1 class="info-text">02</h1></span>
-                    <span class="wrap"><h1 class="info-text">Space</h1></span>
-                    <span class="wrap"><h1 class="info-text">Paris</h1></span>
-                    <span class="wrap"><h1 class="info-text">2021</h1></span>
-                </div>
             </section>
-            <section class="img-section">
+            <section class="img-section W">
                 <div class="wrap img-3">
                     <div class="img"></div>
                 </div>
-                <div class="proj-info-3">
-                    <span class="wrap"><h1 class="info-text">03</h1></span>
-                    <span class="wrap"><h1 class="info-text">Desk</h1></span>
-                    <span class="wrap"><h1 class="info-text">London</h1></span>
-                    <span class="wrap"><h1 class="info-text">2020</h1></span>
-                </div>
+
             </section>
             <section class="img-section">
                 <div class="wrap img-1">
                     <div class="img"></div>
                 </div>
-                <div class="proj-info-1">
-                    <span class="wrap"><h1 class="info-text">04</h1></span>
-                    <span class="wrap"><h1 class="info-text">Detail</h1></span>
-                    <span class="wrap"><h1 class="info-text">Madrid</h1></span>
-                    <span class="wrap"><h1 class="info-text">2020</h1></span>
-                </div>
             </section>
-            <section class="img-section">
+            <section class="img-section S">
                 <div class="wrap img-3">
                     <div class="img"></div>
                 </div>
-                <div class="proj-info-3">
-                    <span class="wrap"><h1 class="info-text">05</h1></span>
-                    <span class="wrap"><h1 class="info-text">Modern</h1></span>
-                    <span class="wrap"><h1 class="info-text">Milan</h1></span>
-                    <span class="wrap"><h1 class="info-text">2019</h1></span>
-                </div>
+
             </section>
             <section class="img-section">
                 <div class="wrap img-2 Q">
                     <div class="img"></div>
-                </div>
-                <div class="proj-info-2">
-                    <span class="wrap"><h1 class="info-text">06</h1></span>
-                    <span class="wrap"><h1 class="info-text">Luxury</h1></span>
-                    <span class="wrap"><h1 class="info-text">Biarritz</h1></span>
-                    <span class="wrap"><h1 class="info-text">2019</h1></span>
                 </div>
             </section>
             <section class="img-section">
                 <div class="wrap img-1 Z">
                     <div class="img"></div>
                 </div>
-                <div class="proj-info-1">
-                    <span class="wrap"><h1 class="info-text">07</h1></span>
-                    <span class="wrap"><h1 class="info-text">Furniture</h1></span>
-                    <span class="wrap"><h1 class="info-text">Lisbon</h1></span>
-                    <span class="wrap"><h1 class="info-text">2018</h1></span>
-                </div>
+                
             </section>
             <div class="fixed-title">
                 <h1>
