--- a/public/work.html
+++ b/public/work.html
@@ -51,6 +51,46 @@
         </li>
       </ul>
     </section>
+    <section class="work">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="work-item">
+              <img src="./images/1.jpg" alt="work 1" class="work-img" />
+              <div class="work-info">
+                <h3 class="work-title">Work 1</h3>
+                <p class="work-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptates, quae.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="work-item">
+              <img src="./images/2.jpg" alt="work 2" class="work-img" />
+              <div class="work-info">
+                <h3 class="work-title">Work 2</h3>
+                <p class="work-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptates, quae.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="work-item">
+              <img src="./images/3.jpg" alt="work 3" class="work-img" />
+              <div class="work-info">
+                <h3 class="work-title">Work 3</h3>
+                <p class="work-desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptates, quae.
+                </p>
+              </div>
+            </div>
+          </div>
+    </section>
     <script src="./js/work.js"></script>
   </body>
 </html>
