--- a/public/work.html
+++ b/public/work.html
@@ -16,10 +16,10 @@
               <a class="nav-link" href="./index.html">Home</a>
             </div>
             <div class="nav-item">
-              <a class="nav-link" href="./about.html">About Me</a>
+              <a class="nav-link" href="./gallery.html">Gallery</a>
             </div>
             <div class="nav-item">
-              <a class="nav-link" href="./work.html">Work</a>
+              <a class="nav-link" href="./soon.html">Work</a>
             </div>
           </ul>
         </div>
@@ -27,7 +27,7 @@
     </header>
     <div class="intro">
       <h1 class="logo-header">
-        <span class="logo">I</span>
+        <span class="logo">i</span>
         <span class="logo">CREATE</span>
       </h1>
     </div>
