--- a/public/gallery.html
+++ b/public/gallery.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/About.css" />
+    <link rel="stylesheet" href="styles/Gallery.css" />
     <title>Document</title>
   </head>
   <body>
+    <div class="intro">
+      <h1 class="logo-header">
+        <span class="logo left">i</span>
+        <span class="logo">CREATE</span>
+      </h1>
+    </div>
+    
     <main>
-      <div class="intro">
-        <h1 class="logo-header">
-          <span class="logo">I</span>
-          <span class="logo">CREATE</span>
-        </h1>
-      </div>
       <header class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="header">
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -23,10 +23,10 @@
                 <a class="nav-link" href="./index.html">Home</a>
               </div>
               <div class="nav-item">
-                <a class="nav-link" href="./about.html">About Me</a>
+                <a class="nav-link" href="./gallery.html">Gallery</a>
               </div>
               <div class="nav-item">
-                <a class="nav-link" href="./work.html">Work</a>
+                <a class="nav-link" href="./soon.html">Work</a>
               </div>
             </ul>
           </div>
@@ -39,12 +39,14 @@
                 <div class="wrap img-2">
                     <div class="img"></div>
                 </div>
-                <div class="proj-info-2">
+                <!-- /* might add this later */ -->
+                <!-- <div class="proj-info-2">
                     <span class="wrap"><h1 class="info-text">01</h1></span>
                     <span class="wrap"><h1 class="info-text">Dining / Lounge</h1></span>
                     <span class="wrap"><h1 class="info-text">New York</h1></span>
                     <span class="wrap"><h1 class="info-text">2021</h1></span>
-                </div>
+                </div> -->
+                <!-- /* might add this later */ -->
             </section>
             <section class="img-section">
                 <div class="wrap img-1">
@@ -77,7 +79,21 @@
                 <div class="wrap img-1 Z">
                     <div class="img"></div>
                 </div>
-                
+            </section>
+            <section class="img-section">
+                <div class="wrap img-3 Q">
+                    <div class="img"></div>
+                </div>
+            </section>
+            <section class="img-section">
+                <div class="wrap img-1">
+                    <div class="img"></div>
+                </div>
+            </section>
+            <section class="img-section">
+                <div class="wrap img-3">
+                    <div class="img"></div>
+                </div>
             </section>
             <div class="fixed-title">
                 <h1>
@@ -105,6 +121,8 @@
     </div>
    
     </main>
-    <script src="./js/about.js"></script>
+    <script src="./js/gallery.js"></script>
   </body>
 </html>
+
+
