fix Splash screen

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="intro">
       <h1 class="logo-header">
         <span class="logo left">i</span>
-        <span class="logo">CREAT</span>
+        <span class="logo">CREATE</span>
       </h1>
     </div>
 
