--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
             facilis ab. Aliquam ea officia quaerat inventore est labore amet,
             animi magnam ex soluta fuga repellendus voluptatum omnis deleniti
-            tempora in.
+            tempora in...
           </p>
         </div>
 
