tab name change

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Single Page</title>
+    <title>Alex Blackburn Creates</title>
     <link rel="stylesheet" href="styles/Home.css" />
   </head>
   <body>
@@ -53,7 +53,7 @@
           <span>ALWAYS</span>
         </h1>
         <div class="">
-          <img src="./images/2.jpg" class="about" />
+          <img src="./images/2.JPG" class="about" />
         </div>
       </div>
 
